--- a/module-2/lab-time-series/your-code/main.ipynb
+++ b/module-2/lab-time-series/your-code/main.ipynb
@@ -586,7 +586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### There doesn't seem to be a high autocorrelation in any of these 2 variables. This would make it difficult to adjusto to an autoregressive model. "
+    "***There doesn't seem to be a high autocorrelation in any of these 2 variables. This would make it difficult to adjusto to an autoregressive model.***"
    ]
   },
   {
@@ -598,12 +598,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st var: 2.823439483037483e-30\n",
+      "2nd var: 6.3202303359124956e-06\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "\n",
+    "stat_1=adfuller(sensor['userAcceleration.x'])\n",
+    "stat_2=adfuller(sensor['rotationRate.x'])\n",
+    "\n",
+    "print(\"1st var:\",stat_1[1])\n",
+    "\n",
+    "print(\"2nd var:\",stat_2[1])"
    ]
   },
   {
@@ -614,12 +629,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
+    "***In both cases the p-value is lower than 0.5, which rejects the null hypothesis and demonstrates the data is stationary. The 1st variable (userAcceleration.x) has a much lower p-value, that should mean is highly stationary.***\n",
     "\n"
    ]
   },
@@ -632,12 +645,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximiliano/.local/lib/python3.6/site-packages/statsmodels/tsa/base/tsa_model.py:165: ValueWarning: No frequency information was provided, so inferred frequency S will be used.\n",
+      "  % freq, ValueWarning)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "from statsmodels.tsa.arima_model import ARMA\n",
+    "\n",
+    "train, test = sensor['userAcceleration.x'][:-10], sensor['userAcceleration.x'][-10:]\n",
+    "\n",
+    "# fit model\n",
+    "model = ARMA(train, order=(2, 1))\n",
+    "model_fit = model.fit(disp=False)\n",
+    "# make prediction\n",
+    "predictions = model_fit.predict(start=len(train), end=len(train)+len(test)-1, dynamic=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The error of the model ARMA_p is 0.19628124144672682\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>observed</th>\n",
+       "      <th>predicted</th>\n",
+       "      <th>difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 00:29:01</th>\n",
+       "      <td>0.149749</td>\n",
+       "      <td>0.173149</td>\n",
+       "      <td>-0.023400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 00:29:02</th>\n",
+       "      <td>0.038461</td>\n",
+       "      <td>0.142896</td>\n",
+       "      <td>-0.104435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 00:29:03</th>\n",
+       "      <td>-0.169175</td>\n",
+       "      <td>0.100522</td>\n",
+       "      <td>-0.269697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 00:29:04</th>\n",
+       "      <td>-0.300361</td>\n",
+       "      <td>0.070106</td>\n",
+       "      <td>-0.370467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 00:29:05</th>\n",
+       "      <td>-0.270174</td>\n",
+       "      <td>0.056099</td>\n",
+       "      <td>-0.326273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 00:29:06</th>\n",
+       "      <td>-0.268367</td>\n",
+       "      <td>0.053778</td>\n",
+       "      <td>-0.322145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 00:29:07</th>\n",
+       "      <td>-0.102444</td>\n",
+       "      <td>0.056790</td>\n",
+       "      <td>-0.159234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 00:29:08</th>\n",
+       "      <td>-0.085590</td>\n",
+       "      <td>0.060646</td>\n",
+       "      <td>-0.146236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 00:29:09</th>\n",
+       "      <td>-0.048105</td>\n",
+       "      <td>0.063316</td>\n",
+       "      <td>-0.111421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 00:29:10</th>\n",
+       "      <td>-0.065011</td>\n",
+       "      <td>0.064493</td>\n",
+       "      <td>-0.129504</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     observed  predicted  difference\n",
+       "2018-01-01 00:29:01  0.149749   0.173149   -0.023400\n",
+       "2018-01-01 00:29:02  0.038461   0.142896   -0.104435\n",
+       "2018-01-01 00:29:03 -0.169175   0.100522   -0.269697\n",
+       "2018-01-01 00:29:04 -0.300361   0.070106   -0.370467\n",
+       "2018-01-01 00:29:05 -0.270174   0.056099   -0.326273\n",
+       "2018-01-01 00:29:06 -0.268367   0.053778   -0.322145\n",
+       "2018-01-01 00:29:07 -0.102444   0.056790   -0.159234\n",
+       "2018-01-01 00:29:08 -0.085590   0.060646   -0.146236\n",
+       "2018-01-01 00:29:09 -0.048105   0.063316   -0.111421\n",
+       "2018-01-01 00:29:10 -0.065011   0.064493   -0.129504"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ARMA_p=pd.DataFrame({'observed':test, 'predicted':predictions, 'difference':test-predictions})\n",
+    "error = ARMA_p['difference'].abs().sum()/ARMA_p['difference'].shape[0]\n",
+    "print(f\"The error of the model ARMA_p is {error}\")\n",
+    "display(ARMA_p)"
    ]
   },
   {
@@ -649,11 +806,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.22529863653820809"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
+    "from statsmodels.tools.eval_measures import rmse\n",
+    "\n",
+    "error2 = rmse(ARMA_p[\"predicted\"],ARMA_p[\"observed\"])\n",
+    "error2\n",
     "\n"
    ]
   },
