Completado intro Pandas

--- a/module-1/lab-intro-pandas/your-code/main.ipynb
+++ b/module-1/lab-intro-pandas/your-code/main.ipynb
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -487,13 +487,13 @@
        "56.95000000000001"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new.loc[:,\"Score_3\"].mean()\n"
+    "new.loc[:,\"Score_3\"].mean()"
    ]
   },
   {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "88.8"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
        "40.75"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
