terminado de verdad

--- a/module-2/visualizing-real-world-data-project/your-code/Visualizing-real-world-data-project-checkpoint.ipynb
+++ b/module-2/visualizing-real-world-data-project/your-code/Visualizing-real-world-data-project-checkpoint.ipynb
@@ -1711,9 +1711,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/pandas/core/ops.py:1649: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  result = method(y)\n"
+     ]
+    }
+   ],
    "source": [
     "offices_no_nulls = data_last[data_last[\"latitude\"].isna()==True].index\n",
     "data_last2 = data_last.drop(offices_no_nulls, axis=0)\n",
@@ -1724,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1866,7 +1875,7 @@
        "9  37.484130 -122.169472       18100000  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1877,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2028,7 @@
        "9  37.484130 -122.169472       18100000  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2031,11 +2040,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_clean.to_json('../oficinas.json', orient=\"records\")"
+    "data_clean.to_json('./oficinas.json', orient=\"records\")"
    ]
   },
   {
