casi listo, me faltan los ultimos 3

--- a/module-2/lab-recommender-deepdive/your-code/main.ipynb
+++ b/module-2/lab-recommender-deepdive/your-code/main.ipynb
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1566,7 @@
        "[5 rows x 452 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1624,109 +1624,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "#unique_prods=list(set(fil_lista))\n",
+    "#sorted(unique_prods,key=lambda x: fil_lista.count(x))\n",
+    "set_fil_lista=list(set(fil_lista))\n",
+    "top_5_lista=sorted(set_fil_lista,key=lambda x: fil_lista.count(x),reverse = True)[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Wine - Vidal Icewine Magnotta',\n",
-       " 'Sprouts - Alfalfa',\n",
-       " 'Chef Hat 20cm',\n",
-       " 'Pork - Loin, Center Cut',\n",
-       " 'Cream Of Tartar',\n",
-       " 'Rambutan',\n",
-       " 'Meldea Green Tea Liquor',\n",
-       " 'Oranges - Navel, 72',\n",
-       " 'Olives - Stuffed',\n",
-       " 'Cookie - Dough Variety',\n",
-       " 'Longos - Grilled Chicken With',\n",
-       " 'Pasta - Detalini, White, Fresh',\n",
-       " 'Artichokes - Jerusalem',\n",
-       " 'Wine - Magnotta, Merlot Sr Vqa',\n",
-       " 'Chips Potato All Dressed - 43g',\n",
-       " 'Chestnuts - Whole,canned',\n",
-       " 'Mushroom - Porcini, Dry',\n",
-       " 'Tea - English Breakfast',\n",
-       " 'Pie Filling - Cherry',\n",
-       " 'Flour - Teff',\n",
-       " 'Soup - Campbells, Lentil',\n",
-       " 'Soup - Campbells, Beef Barley',\n",
-       " 'Initation Crab Meat',\n",
-       " 'Crackers Cheez It',\n",
-       " 'Peas - Frozen',\n",
-       " 'Coffee Decaf Colombian',\n",
-       " 'Spoon - Soup, Plastic',\n",
-       " 'Table Cloth 120 Round White',\n",
-       " 'Carbonated Water - Cherry',\n",
-       " 'Beans - Wax',\n",
-       " 'Gatorade - Xfactor Berry',\n",
-       " 'Bread Crumbs - Japanese Style',\n",
-       " 'Soup - Canadian Pea, Dry Mix',\n",
-       " 'Wonton Wrappers',\n",
-       " 'Lettuce - California Mix',\n",
-       " 'Beef - Texas Style Burger',\n",
-       " 'Vol Au Vents',\n",
-       " 'Barramundi',\n",
-       " 'Creme De Banane - Marie',\n",
-       " 'Milk Powder',\n",
-       " 'Liners - Baking Cups',\n",
-       " 'Garlic',\n",
-       " 'Bread Fig And Almond',\n",
-       " 'Beef Ground Medium',\n",
-       " 'Remy Red',\n",
-       " 'Onions - Cippolini',\n",
-       " 'Wine - Wyndham Estate Bin 777',\n",
-       " 'Rice - Long Grain',\n",
-       " 'Orange - Canned, Mandarin',\n",
-       " 'Wine - Magnotta - Belpaese',\n",
-       " 'Wine - Red, Harrow Estates, Cab',\n",
-       " 'Hot Chocolate - Individual',\n",
-       " 'Water - Spring Water 500ml',\n",
-       " 'Raspberries - Fresh',\n",
-       " 'Hinge W Undercut',\n",
-       " 'Beans - Kidney, Red Dry',\n",
-       " 'Sauce - Rosee',\n",
-       " 'Sauce - Hollandaise',\n",
-       " 'Scallops 60/80 Iqf',\n",
-       " 'Spice - Peppercorn Melange',\n",
-       " 'Bar - Granola Trail Mix Fruit Nut',\n",
-       " 'Wine - Alsace Gewurztraminer',\n",
-       " 'Rabbit - Whole',\n",
-       " 'Steam Pan - Half Size Deep',\n",
+       "['Cheese - Cambozola',\n",
        " 'Bread - Hot Dog Buns',\n",
-       " 'Cheese - Cambozola']"
+       " 'Steam Pan - Half Size Deep',\n",
+       " 'Rabbit - Whole',\n",
+       " 'Bar - Granola Trail Mix Fruit Nut']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_prods=list(set(fil_lista))\n",
-    "sorted(unique_prods,key=lambda x: fil_lista.count(x))"
+    "top_5_lista"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 5: Now that we have generated product recommendations for a single user, put the pieces together and iterate over a list of all CustomerIDs.\n",
-    "\n",
-    "- Create an empty dictionary that will hold the recommendations for all customers.\n",
-    "- Create a list of unique CustomerIDs to iterate over.\n",
-    "- Iterate over the customer list performing steps 2 through 4 for each and appending the results of each iteration to the dictionary you created."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1737,10 +1669,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cust_ids=customer_products[\"CustomerID\"].unique()\n",
+    "\n",
+    "def recommend_me(ids):\n",
+    "    recom_data={\"Recomended\":[\"Product 1\",\"Product 2\",\"Product 3\",\"Product 4\",\"Product 5\"]}\n",
+    "    for _id in ids:\n",
+    "        #step 2:\n",
+    "        customer_products_id=list(customer_products[customer_products[\"CustomerID\"]==_id][\"ProductName\"])\n",
+    "        #step 3:\n",
+    "        lista_tocha_id=[]\n",
+    "        for i in customer_products_id:\n",
+    "            sim_prod_i=list(prod_dist[i].sort_values(ascending=False)[1:6].index)\n",
+    "            lista_tocha_id.append(sim_prod_i)\n",
+    "        flat_lista_id=[j for i in lista_tocha_id for j in i]\n",
+    "        fil_lista_id=[i for i in flat_lista_id if i not in customer_products_id]\n",
+    "        #step 4:\n",
+    "        set_fil_lista_id=list(set(fil_lista_id))\n",
+    "        top_5_lista_id=sorted(set_fil_lista_id,key=lambda x: fil_lista_id.count(x),reverse = True)[:5]\n",
+    "        recom_data[_id]=top_5_lista_id\n",
+    "    recom_df=pd.DataFrame(recom_data)\n",
+    "    recom_df.set_index(\"Recomended\",inplace=True)\n",
+    "    return recom_df.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recommended=recommend_me(cust_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Recomended</th>\n",
+       "      <th>Product 1</th>\n",
+       "      <th>Product 2</th>\n",
+       "      <th>Product 3</th>\n",
+       "      <th>Product 4</th>\n",
+       "      <th>Product 5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Cheese - Cambozola</td>\n",
+       "      <td>Bread - Hot Dog Buns</td>\n",
+       "      <td>Steam Pan - Half Size Deep</td>\n",
+       "      <td>Rabbit - Whole</td>\n",
+       "      <td>Bar - Granola Trail Mix Fruit Nut</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>Water - Green Tea Refresher</td>\n",
+       "      <td>Bread - Hot Dog Buns</td>\n",
+       "      <td>Steam Pan - Half Size Deep</td>\n",
+       "      <td>Cheese - Cambozola</td>\n",
+       "      <td>Wine - Alsace Gewurztraminer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>Water - Green Tea Refresher</td>\n",
+       "      <td>Bread - Hot Dog Buns</td>\n",
+       "      <td>Cheese - Cambozola</td>\n",
+       "      <td>Sauce - Hollandaise</td>\n",
+       "      <td>Bar - Granola Trail Mix Fruit Nut</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356</th>\n",
+       "      <td>Water - Green Tea Refresher</td>\n",
+       "      <td>Bread - Hot Dog Buns</td>\n",
+       "      <td>Cheese - Cambozola</td>\n",
+       "      <td>Sauce - Hollandaise</td>\n",
+       "      <td>Steam Pan - Half Size Deep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>412</th>\n",
+       "      <td>Water - Green Tea Refresher</td>\n",
+       "      <td>Bread - Hot Dog Buns</td>\n",
+       "      <td>Cheese - Cambozola</td>\n",
+       "      <td>Bar - Granola Trail Mix Fruit Nut</td>\n",
+       "      <td>Wine - Alsace Gewurztraminer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Recomended                    Product 1             Product 2  \\\n",
+       "33                   Cheese - Cambozola  Bread - Hot Dog Buns   \n",
+       "200         Water - Green Tea Refresher  Bread - Hot Dog Buns   \n",
+       "264         Water - Green Tea Refresher  Bread - Hot Dog Buns   \n",
+       "356         Water - Green Tea Refresher  Bread - Hot Dog Buns   \n",
+       "412         Water - Green Tea Refresher  Bread - Hot Dog Buns   \n",
+       "\n",
+       "Recomended                   Product 3                          Product 4  \\\n",
+       "33          Steam Pan - Half Size Deep                     Rabbit - Whole   \n",
+       "200         Steam Pan - Half Size Deep                 Cheese - Cambozola   \n",
+       "264                 Cheese - Cambozola                Sauce - Hollandaise   \n",
+       "356                 Cheese - Cambozola                Sauce - Hollandaise   \n",
+       "412                 Cheese - Cambozola  Bar - Granola Trail Mix Fruit Nut   \n",
+       "\n",
+       "Recomended                          Product 5  \n",
+       "33          Bar - Granola Trail Mix Fruit Nut  \n",
+       "200              Wine - Alsace Gewurztraminer  \n",
+       "264         Bar - Granola Trail Mix Fruit Nut  \n",
+       "356                Steam Pan - Half Size Deep  \n",
+       "412              Wine - Alsace Gewurztraminer  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommended.head()"
+   ]
   },
   {
    "cell_type": "markdown",
